// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Markup Editor/Section Add 1`] = `
.c9 {
  box-sizing: content-box;
  width: 10px;
  height: 10px;
  color: currentColor;
}

.c9 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 .c8 {
  color: #fff;
}

.c14 .c8 {
  color: #6e849a;
}

.c11 {
  padding: 0 32px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: auto;
  padding: 20px 32px;
  overflow: visible;
  cursor: default;
}

.c15 .c1 {
  height: 40px;
}

.c15 .c10 {
  padding-bottom: 16px;
}

.c0 {
  position: relative;
  background-color: #fff;
}

.c0::before {
  position: absolute;
  left: 0px;
  right: 0;
  display: block;
  height: 1px;
  background-color: #eaeff4;
  content: '';
  bottom: 0;
}

.c0 .c16 {
  font-weight: normal;
}

.c4:not(:last-child) {
  margin-right: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #8da2b5;
  font-size: 13px;
}

.c5 {
  height: 20px;
  margin: -5px 0;
  font-size: 13px;
  -webkit-letter-spacing: 0.34px;
  -moz-letter-spacing: 0.34px;
  -ms-letter-spacing: 0.34px;
  letter-spacing: 0.34px;
  color: #62778c;
  text-transform: uppercase;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  margin: -3px 0;
  border: 1px solid #6e849a;
  border-radius: 16px;
  cursor: pointer;
}

.c12 {
  padding-bottom: 16px;
}

<div
  style={
    Object {
      "margin": "50px auto",
      "maxWidth": "400px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            Title
          </div>
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c4"
        >
          <div
            className="c7"
            onClick={[Function]}
          >
            <span
              className="c8 c9"
              color="currentColor"
              size={10}
            >
              <svg
                data-file-name="SvgPlus"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c10 c11"
    >
      <div
        className="collapse"
        style={Object {}}
      >
        <div
          className="c12"
        >
          children
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Markup Editor/Section Last 1`] = `
.c9 {
  box-sizing: content-box;
  width: 10px;
  height: 10px;
  color: currentColor;
}

.c9 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 .c8 {
  color: #fff;
}

.c14 .c8 {
  color: #6e849a;
}

.c11 {
  padding: 0 32px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: auto;
  padding: 20px 32px;
  overflow: visible;
  cursor: default;
}

.c15 .c1 {
  height: 40px;
}

.c15 .c10 {
  padding-bottom: 16px;
}

.c0 {
  position: relative;
  background-color: #fff;
}

.c0::before {
  position: absolute;
  left: 0px;
  right: 0;
  display: block;
  height: 1px;
  background-color: #eaeff4;
  content: '';
  bottom: 0;
}

.c0 .c16 {
  font-weight: 600;
}

.c4:not(:last-child) {
  margin-right: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #8da2b5;
  font-size: 13px;
}

.c5 {
  height: 20px;
  margin: -5px 0;
  font-size: 13px;
  -webkit-letter-spacing: 0.34px;
  -moz-letter-spacing: 0.34px;
  -ms-letter-spacing: 0.34px;
  letter-spacing: 0.34px;
  color: #62778c;
  text-transform: uppercase;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  margin: -3px 0;
  border: 1px solid #6e849a;
  border-radius: 16px;
  cursor: pointer;
}

.c12 {
  padding-bottom: 16px;
}

<div
  style={
    Object {
      "margin": "50px auto",
      "maxWidth": "400px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            Title
          </div>
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c4"
        >
          <div
            className="c7"
            onClick={[Function]}
          >
            <span
              className="c8 c9"
              color="currentColor"
              size={10}
            >
              <svg
                data-file-name="SvgMinus"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c10 c11"
    >
      <div
        className="collapse show"
        style={Object {}}
      >
        <div
          className="c12"
        >
          children
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Markup Editor/Section Normal 1`] = `
.c7 {
  padding: 0 32px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: auto;
  padding: 20px 32px;
  overflow: visible;
  cursor: default;
}

.c9 .c1 {
  height: 40px;
}

.c9 .c6 {
  padding-bottom: 16px;
}

.c0 {
  position: relative;
  background-color: #fff;
}

.c0::before {
  position: absolute;
  left: 32px;
  right: 0;
  display: block;
  height: 1px;
  background-color: #eaeff4;
  content: '';
  bottom: 0;
}

.c0 .c10 {
  font-weight: 600;
}

.c4:not(:last-child) {
  margin-right: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.c5 {
  height: 20px;
  margin: -5px 0;
  font-size: 13px;
  -webkit-letter-spacing: 0.34px;
  -moz-letter-spacing: 0.34px;
  -ms-letter-spacing: 0.34px;
  letter-spacing: 0.34px;
  color: #62778c;
  text-transform: uppercase;
}

.c8 {
  padding-bottom: 16px;
}

<div
  style={
    Object {
      "margin": "50px auto",
      "maxWidth": "400px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            Title
          </div>
        </div>
      </div>
    </div>
    <div
      className="c6 c7"
    >
      <div
        className="collapse show"
        style={Object {}}
      >
        <div
          className="c8"
        >
          children
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Creator/Markup Editor/Section Remove 1`] = `
.c9 {
  box-sizing: content-box;
  width: 10px;
  height: 10px;
  color: currentColor;
}

.c9 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 .c8 {
  color: #fff;
}

.c14 .c8 {
  color: #6e849a;
}

.c11 {
  padding: 0 32px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: auto;
  padding: 20px 32px;
  overflow: visible;
  cursor: default;
}

.c15 .c1 {
  height: 40px;
}

.c15 .c10 {
  padding-bottom: 16px;
}

.c0 {
  position: relative;
  background-color: #fff;
}

.c0::before {
  position: absolute;
  left: 32px;
  right: 0;
  display: block;
  height: 1px;
  background-color: #eaeff4;
  content: '';
  bottom: 0;
}

.c0 .c16 {
  font-weight: 600;
}

.c4:not(:last-child) {
  margin-right: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #8da2b5;
  font-size: 13px;
}

.c5 {
  height: 20px;
  margin: -5px 0;
  font-size: 13px;
  -webkit-letter-spacing: 0.34px;
  -moz-letter-spacing: 0.34px;
  -ms-letter-spacing: 0.34px;
  letter-spacing: 0.34px;
  color: #62778c;
  text-transform: uppercase;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  margin: -3px 0;
  border: 1px solid #6e849a;
  border-radius: 16px;
  cursor: pointer;
}

.c12 {
  padding-bottom: 16px;
}

<div
  style={
    Object {
      "margin": "50px auto",
      "maxWidth": "400px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            Title
          </div>
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c4"
        >
          <div
            className="c7"
            onClick={[Function]}
          >
            <span
              className="c8 c9"
              color="currentColor"
              size={10}
            >
              <svg
                data-file-name="SvgMinus"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c10 c11"
    >
      <div
        className="collapse show"
        style={Object {}}
      >
        <div
          className="c12"
        >
          children
        </div>
      </div>
    </div>
  </div>
</div>
`;
